# MAE3185

./: CMakeLists.txt  GNU_plot command line for generating plots from data.txt  Servo.c  Servo.uf2  Servo_2.c  data.txt  main.c  pid.c
BT Module/Setup/: CMakeLists.txt  btsetup.c  btsetup.uf2
Main/: main.c  main.uf2
